--- a/src/index.css
+++ b/src/index.css
@@ -9,91 +9,100 @@
 }
 
 @keyframes alert-sticky-animation {
-    0%   {right: -500px;}
-    15%  {right: 10px;}
-    86%  {right: 10px;}
-    100% {right: -500px;}
+    0% {
+        right: -500px;
+    }
+    15% {
+        right: 10px;
+    }
+    86% {
+        right: 10px;
+    }
+    100% {
+        right: -500px;
+    }
 }
 
 .btn-wrap button.btn {
-  background: #4b384b;
-  border-color: #4b384b;
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 1.5;
-  padding: 10px 43px;
-  border-radius: 25px;
-  transition-property: background, border;
-  transition-duration: 0.5s;
-  font-weight: 300;
+    background: #4b384b;
+    border-color: #4b384b;
+    color: #ffffff;
+    font-size: 18px;
+    line-height: 1.5;
+    padding: 10px 43px;
+    border-radius: 25px;
+    transition-property: background, border;
+    transition-duration: 0.5s;
+    font-weight: 300;
 }
+
 .btn-wrap button.btn:hover {
-  background: none;
-  border-color: #ffffff;
+    background: none;
+    border-color: #ffffff;
 }
 
 .form-error {
-  border-bottom: 1px solid darkred !important;
+    border-bottom: 1px solid darkred !important;
 }
 
 .form-error-message {
-  font-size: 12px;
-  color: darkred;
+    font-size: 12px;
+    color: darkred;
 }
 
 .loading-spinner {
-  position: fixed;
-  top: calc(50% - 20px);
-  left: calc(50% - 20px);
-  transform: translate(-50%, -50%);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
 }
 
 ul.apps-icons li.active span {
-  color: #bf696e;
+    color: #bf696e;
 }
-
 
 /* Custom Upload Button */
 .upload-btn-wrapper {
-  position: relative;
-  overflow: hidden;
-  display: inline-block;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
 }
 
-
 .upload-btn-wrapper input[type=file] {
-  font-size: 100px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
+    font-size: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
 }
 
 ul.alert-btns li .upload-button {
-  border: 1px solid #bf696e;
-  background: none;
-  color: #bf696e;
-  font-size: 12px;
-  line-height: 15.6px;
-  border-radius: 25px;
-  padding: 11px 32px;
-  font-weight: 500;
-  text-transform: uppercase;
-  transition-duration: 0.8s;
-  transition-property: background, color, border;
+    border: 1px solid #bf696e;
+    background: none;
+    color: #bf696e;
+    font-size: 12px;
+    line-height: 15.6px;
+    border-radius: 25px;
+    padding: 11px 32px;
+    font-weight: 500;
+    text-transform: uppercase;
+    transition-duration: 0.8s;
+    transition-property: background, color, border;
 }
+
 ul.alert-btns li .upload-button:hover,
 ul.alert-btns li .upload-button:active,
 ul.alert-btns li .upload-button.active,
 ul.alert-btns li .upload-button:focus,
 ul.alert-btns li .upload-button.focus {
-  border: 1px solid #000;
-  background: #000;
-  color: #ffffff;
+    border: 1px solid #000;
+    background: #000;
+    color: #ffffff;
 }
 
 .alert-form img.alert-frm-img {
-  width: 125px;
+    width: 125px;
 }
 
 .remove-wrapper {
@@ -114,23 +123,23 @@ ul.alert-btns li .upload-button.focus {
 }
 
 /*.btn-done{*/
-    /*background: #bf696e;*/
-    /*border-color: #bf696e;*/
-    /*font-size: 12px;*/
-    /*line-height: 15.6px;*/
-    /*font-weight: 500;*/
-    /*text-transform: uppercase;*/
-    /*margin-bottom: 55px;*/
-    /*padding: 12px 50px;*/
+/*background: #bf696e;*/
+/*border-color: #bf696e;*/
+/*font-size: 12px;*/
+/*line-height: 15.6px;*/
+/*font-weight: 500;*/
+/*text-transform: uppercase;*/
+/*margin-bottom: 55px;*/
+/*padding: 12px 50px;*/
 /*}*/
 /*.btn-done:hover,*/
 /*.btn-done:active,*/
 /*.btn-done.active,*/
 /*.btn-done:focus,*/
 /*.btn-done.focus {*/
-    /*border: 1px solid #000;*/
-    /*background: #000;*/
-    /*color: #ffffff;*/
+/*border: 1px solid #000;*/
+/*background: #000;*/
+/*color: #ffffff;*/
 /*}*/
 
 .completed-section p {
@@ -164,12 +173,20 @@ span.circle-span.active {
     padding: 46vh 0;
     animation-name: app-loading-logo-animation;
     animation-duration: 3s;
-    animation-iteration-count:infinite;
+    animation-iteration-count: infinite;
 }
 
 @keyframes app-loading-logo-animation {
-    0%   {opacity: 0;}
-    40%  {opacity: 1;}
-    60%  {opacity: 1;}
-    100% {opacity: 0;}
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+    60% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
